# Fynance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  teste.txt
docs/: Makefile  conf.py  example.ipynb  make.bat
src/fynance/: Bem vindo.py  Bem_vindo.py  __init__.py  fynance.py  plotting.py
src/fynance/pages/: Gráficos.py
tests/: test_fynance.py
