[tool.poetry]
name = "fynance"
version = "0.1.0"
description = "Um pacote para desenvolvimento web de um app de finanças"
authors = ["Samuel Roberto de Carvalho Bezerra"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
streamlit = "^1.22.0"
yfinance = "^0.2.18"
plotly = "^5.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
